--- a/index.html
+++ b/index.html
@@ -103,12 +103,12 @@
         <h1 id="contato">Contato</h1>
         <p id="sem">
             Email: pontofulnio@gmail.com<br><br>  
-            Whatsapp: 87 9 9913-8915<br><br>
+            Whatsapp: <span>87 9 9913-8915</span><br><br>
             Instagram: @ponto_fulnio
         </p>
     </main>
     <footer>
-        Site produzido pelo <span>Ponto Fulni-ô</span>
+        Site produzido pelo Ponto Fulni-ô
     </footer>
 </body>
 </html>
