--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
     <main>
         <h1 id="rifa"> Rifa </h1>
         <h2>Rifa da Festa da Aldeia</h2>
-        <a href="https://www.instagram.com/p/C2Avwz9OKGj/?utm_source=ig_web_copy_link"><img id="rifa1" src="imagens/rifa.jpg" alt="Rifa"></a>
-        <p>A rifa será relizada no dia 04/02 às 20:00. Custando apenas R$1 cada número e o premio será de um celular Redmi Note 12 na caixa ou R$1.000, ficará para o vencedor decidir, siga o passo a passo de como partipar:</p>
+        <a href="https://rifa.digital/s/rifa-festa-da-aldeia-2024845422?fbclid=PAAaYRbLrTHhBfoMo8EkXMJbXAYTp8rjkPKI4SdUo_u3ogEOUt7CJUO2CHGmA_aem_AdRnEvNEuWkqqpXeoTRKDyE0Lu-mBdTIhtHCfRP4c8rTXyTaJLcNGCepsz0kxm_vsnU"><img id="rifa1" src="imagens/rifa.jpg" alt="Rifa"></a>
+        <p>A rifa será relizada no dia 04/02 às 20:00. R$1 cada número e o premio será de um celular Redmi Note 12 na caixa ou R$1.000, siga o passo a passo de como partipar:</p>
         <p id="passo">
-            1 - Acesse o link do site onde comprará os númedos da rifa (<a id="link1" href="https://rifa.digital/s/rifa-festa-da-aldeia-2024845422?fbclid=PAAaYRbLrTHhBfoMo8EkXMJbXAYTp8rjkPKI4SdUo_u3ogEOUt7CJUO2CHGmA_aem_AdRnEvNEuWkqqpXeoTRKDyE0Lu-mBdTIhtHCfRP4c8rTXyTaJLcNGCepsz0kxm_vsnU">>link do site<</a>) <br><br>
-            2 - Selecione a quantidade de números que deseja comprar, lembrando quanto mais números mais chances terá <br><br> 
-            3 - Reserve os números e preencha o formulario com seus dados (preencha corretamente pois servirá para entrar em contato caso ganhe) <br><br>
-            4 - Chegando na etapa de pagamento terá apenas a opção pix via QR CORE e link de chave aleatoria, basta copiar e colar no seu banco e efeturar o pix <br><br>
-            5 - Após concluir o pagamento volte no inicio do site na parte superior terá o campo de conferir números, digitando apenas o telefone você verá os seus números <br><br>
+            1 - Acesse o link do site onde comprará os númedos da rifa (<a id="link1" href="https://rifa.digital/s/rifa-festa-da-aldeia-2024845422?fbclid=PAAaYRbLrTHhBfoMo8EkXMJbXAYTp8rjkPKI4SdUo_u3ogEOUt7CJUO2CHGmA_aem_AdRnEvNEuWkqqpXeoTRKDyE0Lu-mBdTIhtHCfRP4c8rTXyTaJLcNGCepsz0kxm_vsnU">>Clique aqui para acessar<</a>) <br><br>
+            2 - Selecione a quantidade de números que deseja comprar e reserve<br><br> 
+            3 - Preencha o formulario com seus dados pessoais <br><br>
+            4 - Etapa de pagamento via QR CODE ou link de chave aleatoria<br><br>
+            5 - Após o pagamento no topo do site aperte em Meus númedos para vê-los<br><br>
             
             Tendo varias promoções como maior comprador de números e quem comprar e achar os numeros premiados 0000 e 3000 ganhará premios.<br>
             Boa sorte a todos e qualquer duvida só entrar em cantato.
